# GenericStoryGameV2

./: README.md  index.html  license  package-lock.json  package.json  pnpm-lock.yaml  shell.nix  tsconfig.json  vite.config.ts
src/: App.vue  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: archive_manager.rs  main.rs
src/components/: AnimatingGradient.vue  CollectionsPlayControls.vue  EditorStoriesList.vue  LabelWithTooltip.vue  MenuBackground.vue  PageTitle.vue  StoriesList.vue  StoriesListEntry.vue  StoriesListView.vue
src/router/: index.ts
src/scripts/: book.heic.ts  book.png.ts  consistentDataManager.ts  dialog.css.ts  pathManipulation.ts  playableStoriesManager.ts  rustBackend.ts  sceneEditor.ts  scenesManager.ts  sleep.ts  storiesCollectionManager.ts  story.ts  storyCreator.ts  storyInfoEditor.ts  storyPlaybackHandler.ts  storySaveManager.ts  strings.ts  templateStoryData.ts  utils.ts
src/styles/: index.scss
src/views/: HomeView.vue  PlayOptionsView.vue  StoryPlaybackView.vue
src/views/EditorViews/: CreateOptionsView.vue  EditorOverviewView.vue  ResourceManagerView.vue  ScenesEditorView.vue  WorkspaceView.vue
src/views/EditorViews/NavigationEditorViews/: CustomStoryNode.vue  DeletableEdge.vue  NavigationEditorView.vue
src/views/EditorViews/ScenesEditorViews/: SceneEditorView.vue  ScenesEditorView.vue
src/views/PlayerViews/: CollectionsView.vue  PlayOptionsView.vue  StoryPlaybackView.vue
