[package]
name = "generic-story-game-v2"
version = "1.0.545"
description = "Elegant visual story telling, made easy."
authors = ["Wind-Explorer@github.com", "ZhichGaming@github.com"]
license = "GPL-3.0-or-later"
repository = "https://github.com/wind-explorer/GenericStoryGameV2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [
  "dialog-open",
  "dialog-save",
  "fs-remove-dir",
  "fs-remove-file",
  "fs-rename-file",
  "shell-execute",
  "fs-write-file",
  "protocol-asset",
  "fs-read-file",
  "fs-create-dir",
  "fs-exists",
  "fs-read-dir",
  "path-all",
  "process-exit",
  "shell-open",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "0.6.6"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
